# objectness

./: .gitattributes  .gitignore  README.md  requirements.txt
build_bing_opencv/: CMakeCache.txt  Makefile  PaintingCropperBING  cmake_install.cmake
images/: README.md
main/: cropper.py  cropper_helper.py  orchestrator  orchestrator.go
main/bing_processor/src/: CMakeLists.txt  bing_cropper_single.cpp
main/frcnn_processor/: requirements.txt
main/frcnn_processor/src/: rp_rcnn_single.py
main/output/: combined_data.csv
method_BING/: README.md
method_BING/output/: bing_crops.csv
method_BING/src/: CMakeLists.txt  main_cropper.cpp
method_DeepLearning/: README.md
method_DeepLearning/output/: frcnn_crops2.csv
method_DeepLearning/src/: rp_rcnn.py
nonsalient_cropping/: makeCrops.ipynb
src_bing_opencv/: CMakeLists.txt  main_cropper.cpp
